# Verigate

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  missed_lie.md
.github/workflows/: ci.yml
bench/: __init__.py  generate.py  run.py
docs/: GUARANTEE.md  INTEGRATION.md
examples/: closed_domain.py  feedback_loop.py  middleware_anthropic.py  proof.py
examples/data/: catalog.md  faq.md  products.csv
src/verigate/: __init__.py  canonical.py  cli.py  corpus.py  sdk.py  types.py
src/verigate/api/: app.py
src/verigate/audit/: trail.py
src/verigate/extract/: base.py  entities.py  numbers.py  quotes.py  references.py
src/verigate/extract/packs/: doi_iso.yaml  generic.yaml  legal_fr.yaml  sku_ean.yaml  urls.yaml
src/verigate/ingest/: ingestor.py  loaders.py
src/verigate/verify/: engine.py  rewrite.py
tests/: conftest.py  test_api.py  test_audit.py  test_bench.py  test_corpus.py  test_engine.py  test_examples.py  test_ingest.py  test_no_network.py  test_numbers.py  test_quotes_entities.py  test_references.py  test_scoped.py  test_sdk_cli.py  test_types.py
