[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verigate"
version = "0.1.0"
description = "Deterministic verification layer for generative AI answers — no LLM, on-premise, audit-ready."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mathieu" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
ingest = [
    "pypdf>=4.0",
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
verigate = "verigate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verigate = ["extract/packs/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "network_guard: tests that assert zero outbound network calls",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "BLE"]
# BLE: forbid blind `except Exception` — Beaume audit lesson (no swallowed errors).
